tests/paczka1/small_fuzzy/86216940.err
Error in line 5: wNrGNMLToj A176 140,5
Error in line 2: A176 S556 66,1
Error in line 1: rmIqkSQe A567 87,1
